--- a/.classpath
+++ b/.classpath
@@ -24,19 +24,21 @@
 	</classpathentry>
 	<classpathentry kind="src" path="target/generated-sources/annotations">
 		<attributes>
+			<attribute name="ignore_optional_problems" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="ignore_optional_problems" value="true"/>
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
 		<attributes>
+			<attribute name="ignore_optional_problems" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="ignore_optional_problems" value="true"/>
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/mac/Documents/workspace-spring-tool-suite-4-4.3.0.RELEASE/Frame/WebContent/WEB-INF/lib/REngine-0.9-7.jar"/>
+	<classpathentry kind="lib" path="/Users/mac/Documents/workspace-spring-tool-suite-4-4.3.0.RELEASE/Frame/WebContent/WEB-INF/lib/Rserve-0.6-8.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
