--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_221">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -38,9 +38,6 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/mac/Documents/workspace-spring-tool-suite-4-4.3.0.RELEASE/Frame/WebContent/WEB-INF/lib/REngine-0.9-7.jar"/>
-	<classpathentry kind="lib" path="/Users/mac/Documents/workspace-spring-tool-suite-4-4.3.0.RELEASE/Frame/WebContent/WEB-INF/lib/Rserve-0.6-8.1.jar"/>
-	<classpathentry kind="lib" path="/Users/mac/Documents/workspace-spring-tool-suite-4-4.3.0.RELEASE/Frame/WebContent/WEB-INF/lib/ojdbc6.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
