--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/view/user_myPage/calTest.jsp=UTF-8
 encoding//src/certi/Rjava/CertiInfoR.java=UTF-8
 encoding/<project>=UTF-8
