에러페이지 설정 완료

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -34,7 +34,7 @@
 
 	<error-page>
 		<error-code>404</error-code>
-		<location>/resource/image/error404.png</location>
+		<location>/resource/image/error404.jsp</location>
 	</error-page>
 	<error-page>
 		<error-code>500</error-code>
